# uca_meetings

./: .env  .gitignore  README.md
backend/: alembic.ini  api_types.py  channel.py  config.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 8fe6e212859e_create_users.py  926a606190bc_add_role_to_participants.py  c5e44a9d9031_create_participations.py  c741968192d2_create_meetings_table.py  d579feca9eb6_add_simulated_to_partcipants.py
backend/routers/: meetings.py  users.py
backend/tests/: test_api.py
deploy/: deploy.md  deploy.sh  service_entrypoint.sh  uca_meetings.service
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/app/: actions.ts  root.tsx  routes.ts
frontend/app/components/: cardState.ts  cards.tsx  flash.tsx  primaryNav.tsx
frontend/app/home/: home.tsx
frontend/app/meeting/: cardSelect.tsx  channel.ts  header.tsx  meeting.tsx  participantsList.tsx  questionList.tsx  summary.tsx
frontend/app/routes/: home.tsx  meeting.tsx
frontend/app/welcome/: welcome.tsx
frontend/components/: cards.tsx  flash.tsx  primaryNav.tsx
