[project]
name = "uca-meetings-backend"
version = "0.1.0"
description = "Backend for UCA meetings"
requires-python = ">=3.11"
dependencies = [
  "alembic[tz]==1.15.2",
  "alembic-postgresql-enum==1.7.0",
  "Faker==37.3.0",
  "fastapi[standard]==0.113.0",
  "psycopg2-binary==2.9.10",
  "pydantic==2.8.0",
  "pydantic-settings==2.9.1",
  "sqlalchemy==2.0.41",
  "websockets==15.0.1",
]

[dependency-groups]
dev = [
  "pytest==9.1.1",
  "ruff==0.11.10",
]
