[project]
name = "uca-meetings-backend"
version = "0.1.0"
description = "Backend for UCA meetings"
requires-python = ">=3.11"
dependencies = [
  "alembic[tz]",
  "alembic-postgresql-enum",
  "faker",
  "fastapi[standard]",
  "psycopg2-binary",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy",
  "websockets",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]
